--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+
+<html>
+<head>
+	
+	
+	<title>Coursera Module 2</title>
+	<link rel="stylesheet" type="text/css" href="Module_2.css">
+</head>
+<body>
+<h1 align='center'>Our Menu</h1>
+<h2 align= 'center'>Couursera Module 2</h2>
+	
+<div class='tablet'>
+	<p id='p1'>Chicken</p>
+	Hello How are you?
+	This is one <br>
+	I love Chicken Roast.
+</div>
+
+<div class='tablet'>
+	<p id='p2'>Beef</p>
+	Hello How are you?
+	This is Two <br>
+	Beef is also my Favourite
+	 </div>
+
+	 <div class='tablet'>
+	 <p id='p3'>Sushi</p>
+	Hello How are you?
+	This is Three <br>
+	I have not eaten Sushi yet....
+	 </div>
+
+
+</body>
+</html>
 
