--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1 align='center'>Our Menu</h1>
-<h2 align= 'center'>Couursera Module 2</h2>
+<h2 align= 'center'>Coursera Module 2</h2>
 	
 <div class='tablet'>
 	<p id='p1'>Chicken</p>
